--- a/Sass/abstract/_reset.scss
+++ b/Sass/abstract/_reset.scss
@@ -130,6 +130,7 @@ section {
 html {
   height: 100%;
   width: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -145,6 +146,7 @@ body {
   color: $text_black_light;
   scroll-behavior: smooth;
   background-image: url("/assets/bg/texture_01.png");
+  scroll-behavior: smooth;
 }
 
 ol,
