--- a/engine/component/header/navigation/navigation/Nav_mobil.module.scss
+++ b/engine/component/header/navigation/navigation/Nav_mobil.module.scss
@@ -1,6 +1,6 @@
-@import "./../../../Sass/abstract/function";
-@import "./../../../Sass/abstract/variables";
-@import "./../../../Sass/abstract/animation";
+@import "./../../../../../Sass/abstract/function";
+@import "./../../../../../Sass/abstract/variables";
+@import "./../../../../../Sass/abstract/animation";
 
 .nav {
   @include flex(column, nowrap, center, flex-end);
